# pyemblite

./: .gitattributes  .gitignore  CMakeLists.txt  README.rst  pyproject.toml  setup.py  vcpkg.json
.github/workflows/: python-test-vcpkg.yml  python-test.yml  python-wheel-vcpkg.yml
pyemblite/: rtcore_scene.pyx  test.py
