[build-system]
requires = [
  "setuptools>=42",
  "Cython",
  "wheel",
  "numpy",
  "versioneer[toml]",
  "scikit-build",
  "cmake",
  "ninja"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyemblite"
dependencies = [
    "numpy>=1.14.5"
]
dynamic = ["version"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "pyemblite/_version.py"
versionfile_build = "pyemblite/_version.py"
tag_prefix = "v"
parentdir_prefix = "pyemblite-"
